--- a/NewsLetterAppMVC/NewsLetterAppMVC/NewsLetterAppMVC.csproj
+++ b/NewsLetterAppMVC/NewsLetterAppMVC/NewsLetterAppMVC.csproj
@@ -57,6 +57,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -160,7 +162,25 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\NewsletterSignUp.cs" />
+    <Compile Include="Newsletter.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Newsletter.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Newsletter.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Newsletter.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Newsletter.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Newsletter.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SignUp.cs">
+      <DependentUpon>Newsletter.tt</DependentUpon>
+    </Compile>
     <Compile Include="ViewModels\SignupVm.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -175,6 +195,16 @@
     <Content Include="Content\Site.css" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Newsletter.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Newsletter.edmx</DependentUpon>
+      <LastGenOutput>Newsletter.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Newsletter.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Newsletter.edmx</DependentUpon>
+      <LastGenOutput>Newsletter.cs</LastGenOutput>
     </Content>
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
@@ -198,6 +228,13 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <EntityDeploy Include="Newsletter.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Newsletter.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Newsletter.edmx.diagram">
+      <DependentUpon>Newsletter.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -254,6 +291,7 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
