--- a/NewsLetterAppMVC/NewsLetterAppMVC/Web.config
+++ b/NewsLetterAppMVC/NewsLetterAppMVC/Web.config
@@ -78,4 +78,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="NewsletterEntities" connectionString="metadata=res://*/Newsletter.csdl|res://*/Newsletter.ssdl|res://*/Newsletter.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;initial catalog=Newsletter;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
